# practiceProject

./: .gitignore  .gitmodules  CLI.cpp  CLI.h  CMakeLists.txt  Graph.cpp  Graph.h  ParallelTreeSolution.cpp  ParallelTreeSolution.h  TriangleBoolSquareMatrix.cpp  TriangleBoolSquareMatrix.h  combinatorialUtils.cpp  combinatorialUtils.h  main.cpp
Tests/: CMakeLists.txt  CatchMain.cpp  CombinationTests.cpp  GraphTests.cpp  TriangleBoolSquareMatrixTests.cpp
